<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:drawableTop="@mipmap/ic_share_white_48dp"
            android:drawableTint="#7B82FE"
            android:onClick="share"
            android:text="@string/tv_menu_share"
            android:textAllCaps="false"
            android:textColor="#7B82FE" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:drawableTop="@mipmap/ic_clear_white_48dp"
            android:drawableTint="#7B82FE"
            android:onClick="clear"
            android:text="@string/tv_menu_clear"
            android:textAllCaps="false"
            android:textColor="#7B82FE"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:background="@drawable/memo_bg_main">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@null"
                    android:textColor="#6D6D6D"
                    android:id="@+id/memo_main"
                    android:hint="@string/tv_memo_edittext_hint"/>

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_margin="5dp"
        android:id="@+id/tb_quickmemo"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textOn="@string/tv_main_on"
        android:textOff="@string/tv_main_off"/>

</LinearLayout>
